--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+.app {
+  display: flex;
+  background-color: #dadbdd;
+  color: #25282a;
+  min-height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.sign-form {
+  padding: 1.25rem;
+  border-radius: 1rem;
+  background-color: #fff;
+  box-shadow:
+  0px 1.4px 2.2px rgba(0, 0, 0, 0.02),
+  0px 3.4px 5.3px rgba(0, 0, 0, 0.028),
+  0px 6.4px 10px rgba(0, 0, 0, 0.035),
+  0px 11.4px 17.9px rgba(0, 0, 0, 0.042),
+  0px 21.3px 33.4px rgba(0, 0, 0, 0.05),
+  0px 51px 80px rgba(0, 0, 0, 0.07);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+input, button {
+  border: 1px solid rgba(0, 0, 0, 0.17);
+  outline: none;
+  padding: .75rem 1rem;
+  border-radius: .25rem;
+  font-family: inherit;
+  font-size: 1rem;
+}
+input {
+  transition: .3s ease;
+  transition-property: border-color;
+}
+input:focus {
+  border-color: #079195;
+} 
+
+button {
+  border: none;
+  cursor: pointer;
+  transition: .3s ease;
+  transition-property: background, color;
+  background-color: #079195;
+  color: #fff;
+  font-weight: 500;
+}
+button:hover {
+  background-color: #13adb3;
+}
+button:active {
+  background-color: #007377;
+}
+
+button:disabled {
+  opacity: 0.4;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chat {
+  height: 240px;
+  overflow: auto;
 }
